<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".modules.HomeScreen">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="140dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/container"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_txt"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/search_txt"
                android:inputType="text"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/jua"
        android:paddingLeft="5sp"
        android:text="@string/todo_list_txt"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="68dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_main_page" />

    <ImageView
        android:id="@+id/add_new_btn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_btn" />

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="288dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/no_recent_s"
            android:layout_width="215dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="2sp"
            android:text="@string/recent_task_title"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationY="-1.11sp" />

        <TextView
            android:id="@+id/tap_summari"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="3sp"
            android:text="@string/no_recent_task_content"
            android:textColor="@color/material_dynamic_neutral30"
            android:translationY="-1.53sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>